# 3DCC_LevelAssignment

./: .gitignore  CMakeLists.txt  GameLevel.txt  LevelLoaderLog.txt  OpenGLExtensions.h  Project Rubric.xlsx  README.txt  load_data_oriented.h  main.cpp  renderer.h
Blender Stuff/: Light.mtl  Pickup_Tank_Cylinder_005.mtl  Pickup_Tank_Cylinder_008.mtl  Platform_4x2_Cube_002.mtl  Rail_Corner_Cube_001.mtl  Sign_Corner_3_Fenced_Plane_001.mtl  TV_3_Cylinder_001.mtl  TestScene.blend1
Cyberpunk Game Kit - Quaternius/: Character2.h  Character2.mtl
Levels/: GameLevel.txt  (+2 more)
RendererAssignment_OpenGL/: CMakeLists.txt  Camera.h  CameraController.h  GameLevel.txt  LevelLoaderLog.txt  OpenGLExtensions.h  WhitmanWilson_ LevelRenderer_OpenGL.exe - Shortcut.lnk  load_data_oriented.h  load_object_oriented.h  main.cpp  renderer.h  ~$signment 2 OpenGL.docx
RendererAssignment_OpenGL/Models/: AC.h2b  AC_Side.h2b  AC_Stacked.h2b  Cable_Small.h2b  Character2.h2b  Collectible_Board.h2b  Collectible_Board_Cube.h2b  Collectible_Gear.h2b  Computer.h2b  Cube.h2b  Cube_001.h2b  Cube_002.h2b  Enemy_2Legs.h2b  Enemy_2Legs_Gun.h2b  Enemy_Flying.h2b  Enemy_Flying_Gun.h2b  Enemy_Large_Gun.h2b  Lever_Base_Cube.h2b  Light_Street_1.h2b  Lootbox_Base_Cube.h2b  Lootbox_Top_Cube.h2b  Pickup_Heart.h2b  Pickup_Tank.h2b  Pickup_Tank_Cylinder.h2b  Pipe_1.h2b  Pipe_2.h2b  Pipe_Corner_2.h2b  Platform_1x1_Empty.h2b  Platform_2x1_Empty.h2b  Platform_2x2.h2b  Platform_4x2_Cube.h2b  Platform_4x4.h2b  Platform_4x4_Cube.h2b  Platform_4x4_Empty.h2b  Rail_Corner.h2b  Rail_Corner_2.h2b  Rail_Corner_2_Cube.h2b  Rail_Short.h2b  Sign_1.h2b  Sign_3.h2b  (+17 more)
RendererAssignment_OpenGL/Shaders/: FragmentShader.glsl  GeometryDefaultShader.glsl  GeometryShader.glsl  VertexShader.glsl
(+289 files in other folders)
